added simple authentication event handlers

--- a/static/login.html
+++ b/static/login.html
@@ -5,7 +5,7 @@
   <body>
   <h2>Login</h2>
 
-  <form name="connect-security-login" method="post" action="/c/secure/login">
+  <form name="connect-security-login" method="post" action="/login">
     Username: <input type="text" name="username" id="username" />
     Password: <input type="password" name="password" id="password" />
     <input type="submit" />
