--- a/static/login.html
+++ b/static/login.html
@@ -1,14 +1,37 @@
 <html>
   <head>
     <title>Login</title>
+
+    <style type="text/css">
+      body {
+        font-family: arial, verdana, sans-serif;
+        font-size: 12pt;
+      }
+      fieldset {
+        font-size: 12px;
+        padding: 10px;
+        width: 250px;
+        text-align: right;
+      }
+      ul.errors {
+        text-align: left;
+        color: #ff0000;
+      }
+    </style>
+
   </head>
   <body>
-  <h2>Login</h2>
 
-  <form name="connect-security-login" method="post" action="/login">
-    Username: <input type="text" name="username" id="username" />
-    Password: <input type="password" name="password" id="password" />
-    <input type="submit" />
+  <form name="_login_form" action="{loginUrl}" method="POST">
+  <fieldset>
+    
+    {errors}  
+
+    <legend>Login</legend>
+    Username: <input type="text" size="12" name="username" /> <br />
+    Password: <input type="password" size="12" name="password" /> <br /><br />
+    <input type="submit" value="Login" />
+  </fieldset>
   </form>
 
   </body>
